# synbio-sheets

./: .gitignore  .gitmodules  Makefile  README.md  pyproject.toml  test_parts.tsv
data/: so_termlist.txt
old/: example_parts_container.yaml  test_parts.tsv
sql/: parts.sql
