[tool.poetry]
name = "synbio-sheets"
version = "0.1.0"
description = "schemasheets & cogs based synthetic biology schema"
authors = ["Mark Andrew Miller <MAM@lbl.gov>"]
license = "MIT"

[tool.poetry.dependencies]
schemasheets = "^0.1.6"
python = "^3.9"
dpath = "^2.0.6"
click-log = "^0.3.2"
sheets-and-friends = "^0.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
